--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debounce": "^1.2.0",
     "moment": "^2.29.1",
     "react": "^17.0.1",
+    "react-datepicker": "^3.4.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
